# eterea

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
docs/: bookmark-load-performance.md  frontend-remake-review.md
scripts/: migrate.rs  prepare-linuxdeploy.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  x_sync.rs
src/app/: Cargo.toml
src/app/src/: lib.rs  types.rs
src/app/src/services/: app.rs
src/app/tests/: migration_guardrails.rs
src/backend/: Cargo.toml
src/backend/src/: error.rs  lib.rs  main.rs
src/backend/src/ingestion/: csv_parser.rs  json_parser.rs  mod.rs
src/backend/src/models/: bookmark.rs  mod.rs
src/backend/src/search/: highlighter.rs  mod.rs
src/backend/src/storage/: database.rs  mod.rs  queries.rs  schema.rs
src/backend/tests/: db_load_performance.rs
src/dioxus-app/: Cargo.toml
src/dioxus-app/assets/: app.css
src/dioxus-app/src/: app.rs
src/frontend/: package.json  svelte.config.js  vite.config.ts
src/frontend/src/: app.css  app.html  test-env.d.ts
src/frontend/src/lib/: api.ts  types.ts
src/frontend/src/lib/components/: BookmarkCard.svelte  BookmarkFeed.svelte  BookmarkList.svelte  BookmarkRow.svelte  BookmarkSurface.svelte  DateFilter.svelte  DateRangePicker.svelte  Header.svelte  ImportModal.svelte  ImportSheet.svelte  LayoutSwitcher.svelte  LayoutToggle.svelte  LibrarySidebar.svelte  LibraryWorkspace.svelte  LinkPreview.svelte  SearchBar.svelte  SearchInput.svelte  Sidebar.svelte  index.ts
src/frontend/src/lib/stores/: bookmarks.svelte.ts
src/frontend/src/routes/: +layout.svelte  +page.svelte
src/frontend/src/routes/settings/: +page.svelte
src/frontend/src/routes/stats/: +page.svelte
src/frontend/tests/: remake-verification.spec.ts
src/legacy/: legacy_bookmarks.csv  new_bookmarks.csv
