[package]
name = "eterea"
version = "0.1.0"
description = "Lightning-fast Twitter bookmarks manager"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "eterea_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.18"
url = "2"

# Our core library
eterea-core = { path = "../src/backend" }

# URL opener
open = "5"


