[package]
name = "eterea-core"
version = "0.1.0"
edition = "2021"
description = "Lightning-fast Twitter bookmarks manager"
license = "MIT"

[lib]
name = "eterea_core"
path = "src/lib.rs"

[[bin]]
name = "eterea-cli"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "../../scripts/migrate.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV parsing
csv = "1.3"

# Database
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Text processing for tag extraction
regex = "1.0"
unicode-segmentation = "1.0"

# Directory paths
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"

